; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v10_0.c_gfx_v10_0_get_csb_size.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_gfx_v10_0.c_gfx_v10_0_get_csb_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cs_section_def = type { i64, %struct.cs_extent_def* }
%struct.cs_extent_def = type { i64, i32* }
%struct.amdgpu_device = type { i32 }

@gfx10_cs_data = common dso_local global %struct.cs_section_def* null, align 8
@SECT_CONTEXT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amdgpu_device*)* @gfx_v10_0_get_csb_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gfx_v10_0_get_csb_size(%struct.amdgpu_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.amdgpu_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.cs_section_def*, align 8
  %6 = alloca %struct.cs_extent_def*, align 8
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %3, align 8
  store i32 0, i32* %4, align 4
  store %struct.cs_section_def* null, %struct.cs_section_def** %5, align 8
  store %struct.cs_extent_def* null, %struct.cs_extent_def** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = add nsw i32 %7, 2
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = add nsw i32 %9, 3
  store i32 %10, i32* %4, align 4
  %11 = load %struct.cs_section_def*, %struct.cs_section_def** @gfx10_cs_data, align 8
  store %struct.cs_section_def* %11, %struct.cs_section_def** %5, align 8
  br label %12

12:                                               ; preds = %47, %1
  %13 = load %struct.cs_section_def*, %struct.cs_section_def** %5, align 8
  %14 = getelementptr inbounds %struct.cs_section_def, %struct.cs_section_def* %13, i32 0, i32 1
  %15 = load %struct.cs_extent_def*, %struct.cs_extent_def** %14, align 8
  %16 = icmp ne %struct.cs_extent_def* %15, null
  br i1 %16, label %17, label %50

17:                                               ; preds = %12
  %18 = load %struct.cs_section_def*, %struct.cs_section_def** %5, align 8
  %19 = getelementptr inbounds %struct.cs_section_def, %struct.cs_section_def* %18, i32 0, i32 1
  %20 = load %struct.cs_extent_def*, %struct.cs_extent_def** %19, align 8
  store %struct.cs_extent_def* %20, %struct.cs_extent_def** %6, align 8
  br label %21

21:                                               ; preds = %43, %17
  %22 = load %struct.cs_extent_def*, %struct.cs_extent_def** %6, align 8
  %23 = getelementptr inbounds %struct.cs_extent_def, %struct.cs_extent_def* %22, i32 0, i32 1
  %24 = load i32*, i32** %23, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %46

26:                                               ; preds = %21
  %27 = load %struct.cs_section_def*, %struct.cs_section_def** %5, align 8
  %28 = getelementptr inbounds %struct.cs_section_def, %struct.cs_section_def* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* @SECT_CONTEXT, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %41

32:                                               ; preds = %26
  %33 = load %struct.cs_extent_def*, %struct.cs_extent_def** %6, align 8
  %34 = getelementptr inbounds %struct.cs_extent_def, %struct.cs_extent_def* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = add nsw i64 2, %35
  %37 = load i32, i32* %4, align 4
  %38 = sext i32 %37 to i64
  %39 = add nsw i64 %38, %36
  %40 = trunc i64 %39 to i32
  store i32 %40, i32* %4, align 4
  br label %42

41:                                               ; preds = %26
  store i32 0, i32* %2, align 4
  br label %58

42:                                               ; preds = %32
  br label %43

43:                                               ; preds = %42
  %44 = load %struct.cs_extent_def*, %struct.cs_extent_def** %6, align 8
  %45 = getelementptr inbounds %struct.cs_extent_def, %struct.cs_extent_def* %44, i32 1
  store %struct.cs_extent_def* %45, %struct.cs_extent_def** %6, align 8
  br label %21

46:                                               ; preds = %21
  br label %47

47:                                               ; preds = %46
  %48 = load %struct.cs_section_def*, %struct.cs_section_def** %5, align 8
  %49 = getelementptr inbounds %struct.cs_section_def, %struct.cs_section_def* %48, i32 1
  store %struct.cs_section_def* %49, %struct.cs_section_def** %5, align 8
  br label %12

50:                                               ; preds = %12
  %51 = load i32, i32* %4, align 4
  %52 = add nsw i32 %51, 3
  store i32 %52, i32* %4, align 4
  %53 = load i32, i32* %4, align 4
  %54 = add nsw i32 %53, 2
  store i32 %54, i32* %4, align 4
  %55 = load i32, i32* %4, align 4
  %56 = add nsw i32 %55, 2
  store i32 %56, i32* %4, align 4
  %57 = load i32, i32* %4, align 4
  store i32 %57, i32* %2, align 4
  br label %58

58:                                               ; preds = %50, %41
  %59 = load i32, i32* %2, align 4
  ret i32 %59
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
